storage/hostPath-volume/webapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deploy
  namespace: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp-pod
  template:
    metadata:
      labels:
        app: webapp-pod
    spec:
      containers:
      - name: mynginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: myhostpathvolume
      volumes:
        - name: myhostpathvolume
          hostPath:
            path: /myhostpath
            type: DirectoryOrCreate
