storage/hostPath-volume/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
spec:
  rules:
  - host: web.local.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-pod
            port:
              number: 8080
